# BiasInEar

./: LICENSE  README.md  pyproject.toml
examples/: 01_load_data.py  02_run_inference.py  03_evaluate.py  inference_gemini.py  inference_mistral.py  inference_nvidia.py  inference_openai.py
src/biasinear/: __init__.py  data.py  evaluate.py  utils.py
src/biasinear/metrics/: __init__.py  accuracy.py  apes.py  entropy.py  fleiss_kappa.py
src/biasinear/models/: __init__.py  _parser.py  base.py  gemini.py  mistral.py  nvidia.py  openai.py
tests/: test_evaluator.py  test_metrics.py  test_parser.py
