[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biasinear"
version = "0.2.0"
description = "BiasInEar: Assessing Sensitivity in Audio Language Models Across Linguistic, Demographic, and Positional Variations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sheng-Lun Wei" },
    { name = "Yu-Ling Liao" },
    { name = "Yen-Hua Chang" },
    { name = "Hen-Hsen Huang" },
    { name = "Hsin-Hsi Chen" },
]
keywords = ["speech", "bias", "fairness", "evaluation", "audio", "multilingual"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
data = ["datasets", "soundfile"]
audio = ["pydub"]
gemini = ["google-genai"]
openai = ["openai>=1.0"]
nvidia = ["openai>=1.0"]
mistral = ["mistralai"]
all = ["biasinear[data,audio,gemini,openai,nvidia,mistral]"]
dev = ["pytest", "biasinear[all]"]

[project.urls]
Homepage = "https://github.com/ntunlplab/BiasInEar"
Repository = "https://github.com/ntunlplab/BiasInEar"
Paper = "https://arxiv.org/abs/2602.01030"
Dataset = "https://huggingface.co/datasets/ntunlplab/BiasInEar"

[tool.hatch.build.targets.wheel]
packages = ["src/biasinear"]

[tool.pytest.ini_options]
testpaths = ["tests"]
